# Controle_Backup

./: .gitignore  CMakeLists.txt  README.md  controle_backup.cpp  controle_cpp.kdev4  main.cpp
.github/workflows/: codeql-analysis.yml
.kdev4/: controle_cpp.kdev4
core/: includes.h  tFile.cpp  tFile.h  tSystem.cpp  tSystem.h
